--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 <h1 clas="page-heading">Sections</h1>
   <ul class="page-list">
     <li><h2><a class="page-link" href="blog">Blog</a></h2></li>
-    <li><h4><a class="page-link" href="blog/home/">Read</a></h4></li>
+    <h4 style="padding-left: 10px;"><a class="page-link" href="blog/home/">Read</a></h4>
     <li><h2><a class="page-link" href="projects">Projects</a></h2></li>
   </ul>
 
