--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: post-index
-title: Home
+title: 
 description: "Computers and Such"
 tags: [Jekyll, blog, modern, Luther College]
 comments: false
