--- a/presentation/index.html
+++ b/presentation/index.html
@@ -1,11 +1,12 @@
 ---
-layout: about
-title: Calendar
+layout: present
+title: Tianhe-2
 image:
   feature: abstract-4.jpg
   credit: dargadgetz
   creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
-comments: true
+comments: false
+share: false
 ---
 
-{% include cal.html %}
+{% include presentation.html %}
