adding robots.txt

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: landing
-title: 
+title: I build things.
 description: "Computers and Such"
 tags: [Jekyll, blog, modern, Luther College]
 comments: false
