setting groundwork for new pagnation

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: landing
-title: I build things.
+title: 
 description: "Computers and Such"
 tags: [Jekyll, blog, modern, Luther College]
 comments: false
